tmuxをpowerlineに対応させる

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,47 @@
-set-window-option -g utf8 on
+# powerline
+
+run-shell "powerline-daemon -q"
+source '/usr/local/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf'
+
+set-option -g default-terminal screen-256color
+# set-option -g default-command "source ~/.zshrc"
+set -g terminal-overrides 'xterm:colors=256'
+
+# prefixをCtrl+q に変更
+set-option -g prefix C-q
+unbind-key C-b
+bind-key C-q send-prefix
+
+set-option -g status on
+set-option -g status-interval 1
+set-option -g status-left-length 40
+set-option -g status-right-length 60
+#set-option -g status-left '#(~/tmux-powerline/powerline.sh left) #[fg=cyan][#(~/test.sh)]'
+set-option -g status-left ''
+# set-option -g status-right '#(~/tmux-powerline/powerline.sh right) #{current_pane_path}'
+# set-option -g status-justify "left"
+# set-option -g status-left '#{current_pane_path}'
+set-option -g status-right '#[fg=cyan][#(~/test.sh)]         '
+setw -g window-status-current-fg white
+setw -g window-status-current-attr bright
+
+#set-window-option -g window-status-current-format "#(~/test.sh)"
+set-window-option -g window-status-current-format "#[fg=colour232, bg=colour31] #[fg=colour255, bg=colour31] #I*  #W #[fg=colour255, bg=colour31, nobold] [#(~/test.sh)]#[fg=colour31, bg=colour232]"
+set -g pane-active-border-fg black
+set -g pane-active-border-bg cyan
+
+# prefix + r 設定再読み込み
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# | でペインを縦に分割する
+bind-key | split-window -h
+
+# - でペインを横に分割する
+bind-key - split-window -v
+
+
+set -s escape-time 0
+#set -g status-fg white
+#set -g status-bg black
+
 
