--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,7 @@ setw -g window-status-current-fg white
 setw -g window-status-current-attr bright
 
 #set-window-option -g window-status-current-format "#(~/test.sh)"
-set-window-option -g window-status-current-format "#[fg=colour232, bg=colour31] #[fg=colour255, bg=colour31] #I*  #W #[fg=colour255, bg=colour31, nobold] [#(~/test.sh)]#[fg=colour31, bg=colour232]"
+set-window-option -g window-status-current-format "#[fg=colour232, bg=colour31] #[fg=colour255, bg=colour31] #I*  #W #[fg=colour255, bg=colour31, nobold] #[fg=colour31, bg=colour232]"
 set -g pane-active-border-fg black
 set -g pane-active-border-bg cyan
 
