[tmux]トラックパッドのスクロールでウインドウをスクロールするように変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,8 @@ source '/usr/local/lib/python3.5/site-packages/powerline/bindings/tmux/powerline
 
 set-option -g default-terminal screen-256color
 # set-option -g default-command "source ~/.zshrc"
-set -g terminal-overrides 'xterm:colors=256'
+set -g mouse on
+set -g terminal-overrides 'xterm:colors=256:smcup@:rmcup@'
 
 # prefixをCtrl+q に変更
 set-option -g prefix C-q
@@ -21,7 +22,7 @@ set-option -g status-left ''
 # set-option -g status-right '#(~/tmux-powerline/powerline.sh right) #{current_pane_path}'
 # set-option -g status-justify "left"
 # set-option -g status-left '#{current_pane_path}'
-set-option -g status-right '#[fg=cyan][#(~/test.sh)]         '
+set-option -g status-right '#[fg=cyan][#(~/test.sh)]                                   '
 setw -g window-status-current-fg white
 setw -g window-status-current-attr bright
 
@@ -29,6 +30,7 @@ setw -g window-status-current-attr bright
 set-window-option -g window-status-current-format "#[fg=colour232, bg=colour31] #[fg=colour255, bg=colour31] #I*  #W #[fg=colour255, bg=colour31, nobold] #[fg=colour31, bg=colour232]"
 set -g pane-active-border-fg black
 set -g pane-active-border-bg cyan
+
 
 # prefix + r 設定再読み込み
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
