status line の色を変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,12 @@
 # powerline
-
 run-shell "powerline-daemon -q"
 source '/usr/local/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf'
 
 set-option -g default-terminal screen-256color
-# set-option -g default-command "source ~/.zshrc"
+
 set -g mouse on
 set -g terminal-overrides 'xterm:colors=256:smcup@:rmcup@'
+setw -g mode-keys vi
 
 # prefixをCtrl+q に変更
 set-option -g prefix C-q
@@ -16,21 +16,20 @@ bind-key C-q send-prefix
 set-option -g status on
 set-option -g status-interval 1
 set-option -g status-left-length 40
-set-option -g status-right-length 60
-#set-option -g status-left '#(~/tmux-powerline/powerline.sh left) #[fg=cyan][#(~/test.sh)]'
-set-option -g status-left ''
-# set-option -g status-right '#(~/tmux-powerline/powerline.sh right) #{current_pane_path}'
-# set-option -g status-justify "left"
-# set-option -g status-left '#{current_pane_path}'
-set-option -g status-right '#[fg=cyan][#(~/test.sh)]                                   '
+set-option -g status-right-length 100
+set -g status-justify centre
+
 setw -g window-status-current-fg white
 setw -g window-status-current-attr bright
 
-#set-window-option -g window-status-current-format "#(~/test.sh)"
-set-window-option -g window-status-current-format "#[fg=colour232, bg=colour31] #[fg=colour255, bg=colour31] #I*  #W #[fg=colour255, bg=colour31, nobold] #[fg=colour31, bg=colour232]"
-set -g pane-active-border-fg black
-set -g pane-active-border-bg cyan
+# foreground のジョブを表示
+set-option -g status-left "#[fg=colour232, bg=colour172] #[fg=colour255, bg=colour172, bold] #I*  #W #[fg=colour255, bg=colour172, nobold] #[fg=colour172, bg=colour232]"
 
+# active な pane がいるディレクトリを表示
+set-window-option -g window-status-current-format "#[fg=colour154][#(~/where_i_am.sh)]"
+
+set -g pane-active-border-fg black
+set -g pane-active-border-bg colour231
 
 # prefix + r 設定再読み込み
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -41,9 +40,7 @@ bind-key | split-window -h
 # - でペインを横に分割する
 bind-key - split-window -v
 
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 set -s escape-time 0
-#set -g status-fg white
-#set -g status-bg black
-
-
