powerline の設定ファイル

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,3 +44,4 @@ bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 set -s escape-time 0
+set -g default-command "reattach-to-user-namespace -l /usr/local/bin/zsh"
