コメント追加

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,10 +33,10 @@ set -g pane-active-border-bg colour231
 # prefix + r 設定再読み込み
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# | でペインを縦に分割する
+# prefix + | でアクティブなペインを縦に分割する
 bind-key | split-window -h
 
-# - でペインを横に分割する
+# prefix + - でアクティブなペインを横に分割する
 bind-key - split-window -v
 
 bind-key -t vi-copy v begin-selection
