--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Homma Takuma
-	email = sfprhythnn@gmail.com
+	email = nagomimatcha@gmail.com
 [color]
   ui = true
 [color "status"]
@@ -15,3 +15,6 @@
   al = config --get-regexp alias.*
   cm = commit
   wip = commit --allow-empty -m 'WIP'
+[merge "mergepbx"]
+	name = Xcode project files merger
+	driver = mergepbx %O %A %B
