tmux status-line の更新頻度を伸ばしたのと, 下に表示することの明示

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,10 +13,11 @@ unbind-key C-b
 bind-key C-q send-prefix
 
 set-option -g status on
-set-option -g status-interval 1
+set-option -g status-interval 120
 set-option -g status-left-length 40
 set-option -g status-right-length 100
 set -g status-justify centre
+set -g status-position bottom
 
 setw -g window-status-current-fg white
 setw -g window-status-current-attr bright
