where_i_am を bin 以下に配置

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,7 @@ setw -g window-status-current-attr bright
 set-option -g status-left "#[fg=colour232, bg=colour250] #[fg=colour7, bg=colour250, bold] #I*  #W #[fg=colour255, bg=colour250, nobold] #[fg=colour250, bg=colour232]"
 
 # active な pane がいるディレクトリを表示
-set-window-option -g window-status-current-format '#(~/where_i_am)'
+set-window-option -g window-status-current-format '#(~/dotfiles/bin/where_i_am)'
 
 set -g pane-active-border-fg black
 set -g pane-active-border-bg colour231
