--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,7 +43,7 @@ bind-key | split-window -h
 # prefix + - でアクティブなペインを横に分割する
 bind-key - split-window -v
 
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t copy-mode-vi v begin-selection
+bind-key -t copy-mode-vi y copy-pipe "reattach-to-user-namespace pbcopy"
 
 set -s escape-time 0
