for tmux status-left

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,7 @@ setw -g window-status-current-fg white
 setw -g window-status-current-attr bright
 
 # foreground のジョブを表示
-set-option -g status-left "#[fg=colour232, bg=colour250] #[fg=colour7, bg=colour250, bold] #I*  #W #[fg=colour255, bg=colour250, nobold] #[fg=colour250, bg=colour232]"
+set-option -g status-left '#(~/dotfiles/bin/status-left)'
 
 # active な pane がいるディレクトリを表示
 set-window-option -g window-status-current-format '#(~/dotfiles/bin/where_i_am)'
@@ -43,7 +43,7 @@ bind-key | split-window -h
 # prefix + - でアクティブなペインを横に分割する
 bind-key - split-window -v
 
-bind-key -t copy-mode-vi v begin-selection
-bind-key -t copy-mode-vi y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 set -s escape-time 0
