--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,23 +2,23 @@
 run-shell "powerline-daemon -q"
 source '/usr/local/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf'
 
-set-option -g default-terminal screen-256color
-set-option -g default-shell "/usr/local/bin/fish"
-set-option -g default-command "reattach-to-user-namespace -l /usr/local/bin/fish"
+set -g default-terminal screen-256color
+set -g default-shell "/usr/local/bin/fish"
+set -g default-command "reattach-to-user-namespace -l /usr/local/bin/fish"
 
 set -g mouse on
 set -g terminal-overrides 'xterm:colors=256:smcup@:rmcup@'
 setw -g mode-keys vi
 
 # prefixをCtrl+q に変更
-set-option -g prefix C-q
+set -g prefix C-q
 unbind-key C-b
 bind-key C-q send-prefix
 
-set-option -g status on
-set-option -g status-interval 1
-set-option -g status-left-length 40
-set-option -g status-right-length 100
+set -g status on
+set -g status-interval 1
+set -g status-left-length 40
+set -g status-right-length 100
 set -g status-justify centre
 set -g status-position bottom
 
@@ -26,10 +26,10 @@ setw -g window-status-current-fg white
 setw -g window-status-current-attr bright
 
 # foreground のジョブを表示
-set-option -g status-left '#(~/dotfiles/bin/status-left)'
+set -g status-left '#(~/dotfiles/bin/status-left)'
 
 # active な pane がいるディレクトリを表示
-set-window-option -g window-status-current-format '#(~/dotfiles/bin/where_i_am)'
+setw -g window-status-current-format '#(~/dotfiles/bin/where_i_am)'
 
 set -g pane-active-border-fg black
 set -g pane-active-border-bg colour231
