--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,12 +38,12 @@ set -g pane-active-border-bg colour231
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # prefix + | でアクティブなペインを縦に分割する
-bind-key | split-window -h
+bind-key | split-window -hc "#{pane_current_path}"
 
 # prefix + - でアクティブなペインを横に分割する
-bind-key - split-window -v
+bind-key - split-window -vc "#{pane_current_path}"
 
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 set -s escape-time 0
