--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,7 +43,7 @@ bind-key | split-window -hc "#{pane_current_path}"
 # prefix + - でアクティブなペインを横に分割する
 bind-key - split-window -vc "#{pane_current_path}"
 
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 set -s escape-time 0
