do not ignore my fish functions

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 /vim/repos/
 .DS_Store
 /fish/fishd.*
-/fish/functions/
+/fish/functions/*
 /fish/completions
 /fish/work.fish
 /fish/github_access_token.fish
 
 # allow my func
-!/fish/functions/my_*
-!/fish/functions/set_*
+!/fish/functions/fish_prompt.fish
+!/fish/functions/fish_title.fish
