--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 !/fish/functions/fish_prompt.fish
 !/fish/functions/fish_title.fish
 !/fish/functions/fish_right_prompt.fish
+!/fish/functions/gco.fish
