--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [core]
-  editor = "emacsclient -nw"
+  editor = "emacsclient -nw -t"
 [user]
   name = Takuma Homma
   email = nagomimatcha@gmail.com
@@ -15,9 +15,12 @@
   unstage = reset HEAD
   b = branch
   al = config --get-regexp alias.*
-  cm = commit
+  cm = commit -v
   wip = commit --allow-empty -m 'WIP'
   delete-merged-branch = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|master'|xargs git branch -d; };f"
+  showpr = !"f() { git log --merges --oneline --reverse --ancestry-path $1...master | grep 'Merge pull request #' | head -n 1; }; f"
 [merge "mergepbx"]
   name = Xcode project files merger
   driver = mergepbx %O %A %B
+[fetch]
+	prune = true
