--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [core]
-  editor = "emacsclient -nw -t"
+  editor = emacsclient -nw -t
 [user]
   name = Takuma Homma
   email = nagomimatcha@gmail.com
@@ -15,14 +15,17 @@
   unstage = reset HEAD
   b = branch
   al = config --get-regexp alias.*
-  cm = commit -v
-  wip = commit --allow-empty -m 'WIP'
+  cm = commit -v -S
+  wip = commit -S --allow-empty -m 'WIP'
   delete-merged-branch = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|master'|xargs git branch -d; };f"
   showpr = !"f() { git log --merges --oneline --reverse --ancestry-path $1...master | grep 'Merge pull request #' | head -n 1; }; f"
+  pr = pull-request
 [merge "mergepbx"]
   name = Xcode project files merger
   driver = mergepbx %O %A %B
 [fetch]
   prune = true
 [ghq]
-  root = ~/github.com
+  root = ~/
+[pull]
+  rebase = true
