delete branch and create new pull request

--- a/.gitconfig
+++ b/.gitconfig
@@ -18,9 +18,11 @@
   cm = commit -v -S
   wip = commit -S --allow-empty -m 'WIP'
   delete-merged-branch = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|master'|xargs git branch -d; };f"
+  deletebr = branch -D
   showpr = !"f() { git log --merges --oneline --reverse --ancestry-path $1...master | grep 'Merge pull request #' | head -n 1; }; f"
   showprdev = !"f() { git log --merges --oneline --reverse --ancestry-path $1...develop | grep 'Merge pull request #' | head -n 1; }; f"
   pr = \
+  mkpr = \
   "!f () {\
           branch=$1;\
       if [ -z ${branch} ]; then\
@@ -35,5 +37,6 @@
   prune = true
 [ghq]
   root = ~/
+  root = ~/src
 [pull]
   rebase = true
