--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # powerline
-run-shell "powerline-daemon -q"
-source '/usr/local/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf'
+# run-shell "powerline-daemon -q"
+# source '/usr/local/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf'
 
 set -g default-terminal screen-256color
 set -g default-shell "/usr/local/bin/fish"
@@ -17,22 +17,28 @@ bind-key C-q send-prefix
 
 set -g status on
 set -g status-interval 1
-set -g status-left-length 40
-set -g status-right-length 100
+set -g status-left-length 60
+set -g status-right-length 120
 set -g status-justify centre
 set -g status-position bottom
 
 setw -g window-status-current-fg white
-setw -g window-status-current-attr bright
+# setw -g window-status-current-attr bright
+setw -g window-status-current-attr black
 
 # foreground のジョブを表示
-set -g status-left '#(~/dotfiles/bin/status-left)'
+set -g status-left '#(~/src/github.com/dotfiles/bin/status-left)'
+
+set -g status-right ''
 
 # active な pane がいるディレクトリを表示
-setw -g window-status-current-format '#(~/dotfiles/bin/where_i_am)'
+set -g window-status-current-format '#[fg=colour255,bg=colour241]'
 
 set -g pane-active-border-fg black
 set -g pane-active-border-bg colour231
+
+set -g status-bg "#455A64"
+set -g status-fg "#455A64"
 
 # prefix + r 設定再読み込み
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
