--- a/.tigrc
+++ b/.tigrc
@@ -4,8 +4,8 @@ set split-view-height = 70%
 set vertical-split = false
 
 bind status C !git cm
-bind generic P ?git push -u %(remote) %(repo:head)
-bind branch P ?git push -u %(remote) %(repo:head)
+bind generic P ?<git push -u %(remote) %(repo:head)
+bind branch P ?<git push -u %(remote) %(repo:head)
 
 bind generic U ?git pull %(remote)
 bind generic H ?hub mkpr develop
