--- a/.gitconfig
+++ b/.gitconfig
@@ -42,6 +42,6 @@
 [pull]
   rebase = true
 [commit]
-	template = /Users/mataku/src/github.com/dotfiles/.commit_template
+	template = ~/src/github.com/dotfiles/.commit_template
 [init]
   defaultBranch = develop
