fzf.vim with pt

--- a/nvim/rc/dein.toml
+++ b/nvim/rc/dein.toml
@@ -1,5 +1,8 @@
-#[[plugins]]
-#repo = 'Shougo/dein.vim'
+[[plugins]]
+repo = 'neoclide/coc.nvim'
+rev = 'release'
+on_i = 1
+merged = '0'
 
 [[plugins]]
 repo = 'scrooloose/nerdtree'
@@ -11,7 +14,6 @@ on_ft = 'go'
 [[plugins]]
 repo = 'vim-scripts/ruby-matchit'
 on_ft = 'ruby'
-
 
 [[plugins]]
 repo = 'tpope/vim-endwise'
@@ -35,6 +37,20 @@ repo = 'roxma/nvim-yarp'
 
 [[plugins]]
 repo = 'roxma/vim-hug-neovim-rpc'
+
+[[plugins]]
+repo = 'junegunn/fzf'
+merged = '0'
+
+[[plugins]]
+repo = 'junegunn/fzf.vim'
+depends = 'fzf'
+hook_add = '''
+command! -bang -nargs=* Pt
+  \ call fzf#vim#grep(
+  \   'pt --color --smart-case -- '.shellescape(<q-args>), 1,
+  \   fzf#vim#with_preview({'options': '--exact --reverse'}, 'right:50%:wrap'))
+'''
 
 [[plugins]]
 repo = 'mataku/papercolor-theme'
