--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /nvim/dein/
 /vim/repos/
+/vim/indent/dein
 .DS_Store
 /fish/fishd.*
 /fish/functions/*
@@ -21,5 +22,6 @@
 !/fish/functions/gmg.fish
 !/fish/functions/killer.fish
 !/fish/functions/adb-open.fish
+!/fish/functions/adb-install.fish
 
 emacs.d/elpa/
