--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [core]
-  editor = emacsclient -nw -t
+  editor = nvim -c 'startinsert'
   pager = bat
 [user]
   name = Takuma Homma
@@ -18,8 +18,8 @@
   al = config --get-regexp alias.*
   cm = commit -v -S
   wip = commit -S --allow-empty -m 'WIP'
-  delete-branch = "!f () { git branch | fzf | xargs git branch -d; };f"
-  delete-merged-branch = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|master'|xargs git branch -d; };f"
+  delete-branch = "!f () { git branch | fzf | xargs git branch -D; };f"
+  delete-merged-branch = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|master'|xargs git branch -D; };f"
   delbr = branch -D
   showpr = !"f() { git log --merges --oneline --reverse --ancestry-path $1...master | grep 'Merge pull request #' | head -n 1; }; f"
   showprdev = !"f() { git log --merges --oneline --reverse --ancestry-path $1...develop | grep 'Merge pull request #' | head -n 1; }; f"
