--- a/.github/workflows/provisioning.yml
+++ b/.github/workflows/provisioning.yml
@@ -18,6 +18,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Provisioning
       run: |
-        set -ex
         export HOMEBREW_BUNDLE_MAS_SKIP="$(grep mas <Brewfile | grep -v brew | awk -F '[, "]' '{printf $3" "}')"
-        /bin/bash setup.sh
+        /bin/bash -ex setup.sh
