Make head_ref visible

--- a/.github/workflows/provisioning.yml
+++ b/.github/workflows/provisioning.yml
@@ -2,9 +2,10 @@ name: Provisioning
 
 on:
   workflow_dispatch:
+  pull_request:
   push:
     branches:
-      - '**'
+      - develop
 
 concurrency:
   group: ${{ github.head_ref || 'develop' }}
