--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 /fish/completions
 /fish/work.fish
 /fish/github_access_token.fish
-fish/fish_variables
+/fish/fish_variables
+/fish/conf.d
 
 # allow my func
 !/fish/functions/fish_prompt.fish
